# FastParseX

./: CHANGELOG.md  CMakeLists.txt  LICENSE  README.md
benchmarks/: README.md  benchmark_binary.cpp  benchmark_utils.hpp  csv_benchmark.cpp  log_benchmark.cpp
docs/: README.md  architecture.md  getting_started.md
examples/: README.md  csv_example.cpp  example_binary.cpp  example_csv.cpp  example_export.cpp  example_log.cpp  example_parallel_csv.cpp  example_parallel_log.cpp  log_example.cpp  parallel_csv_examples.cpp
include/fastparsex/: binary.hpp  csv.hpp  csv_parser.cpp  error.hpp  export.hpp  fastparsex.hpp  file_reader.hpp  log.hpp  parallel.hpp  profiling.hpp  types.hpp  version.hpp
include/fastparsex/binary/: binary_parser.hpp  binary_reader.hpp
include/fastparsex/core/: fp_error.hpp
include/fastparsex/csv/: config.hpp  csv_parser.hpp  csv_reader.hpp  types.hpp
include/fastparsex/export/: arrow_writer.hpp
include/fastparsex/log/: log_parser.hpp  log_reader.hpp
include/fastparsex/log.hpp/: log.hpp  log_config.hpp  log_parser.hpp
src/binary/: CMakeLists.txt  binary.cpp  binary_parser.cpp  binary_reader.cpp
src/compress/: CMakeLists.txt  compress.cpp
src/core/: CMakeLists.txt  core.cpp  file_reader.cpp
src/csv/: CMakeLists.txt  csv.cpp  csv_parser.cpp  csv_reader.cpp
src/export/: CMakeLists.txt  arrow_writer.cpp  export.cpp
src/log/: CMakeLists.txt  log.cpp  log_reader.cpp
src/parallel/: CMakeLists.txt  parallel.cpp  parallel_csv.cpp  parallel_log.cpp
src/profiling/: CMakeLists.txt  profiler.cpp  profiling.cpp
(+3 files in other folders)
